src/test/ui/parser/issues/issue-88276-unary-plus.stderr
error: leading `+` is not supported
  --> $DIR/issue-88276-unary-plus.rs:4:13
   |
LL |     let _ = +1;
   |             ^ unexpected `+`
   |
help: try removing the `+`
   |
LL -     let _ = +1;
LL +     let _ = 1;
   | 

error: Rust has no postfix increment operator
  --> $DIR/issue-88276-unary-plus.rs:5:18
   |
LL |     let _ = (1.0 + +2.0) * +3.0;
   |                  ^^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL |     let _ = ({ let tmp = 1.0 ; 1.0 += 1; tmp }2.0) * +3.0;
   |              +++++++++++     ~~~~~~~~~~~~~~~~~
help: or, if you don't need to use it as an expression, change it to this
   |
LL -     let _ = (1.0 + +2.0) * +3.0;
LL +     let _ = (1.0  += 12.0) * +3.0;
   | 

error: leading `+` is not supported
  --> $DIR/issue-88276-unary-plus.rs:5:28
   |
LL |     let _ = (1.0 + +2.0) * +3.0;
   |                            ^ unexpected `+`
   |
help: try removing the `+`
   |
LL -     let _ = (1.0 + +2.0) * +3.0;
LL +     let _ = (1.0 + +2.0) * 3.0;
   | 

error: leading `+` is not supported
  --> $DIR/issue-88276-unary-plus.rs:7:14
   |
LL |     let _ = [+3, 4+6];
   |              ^ unexpected `+`
   |
help: try removing the `+`
   |
LL -     let _ = [+3, 4+6];
LL +     let _ = [3, 4+6];
   | 

error: aborting due to 4 previous errors

